# guestbook.guide

./: .replit  LICENSE  README.md  app.py  pyproject.toml  response.json
static/: casa_mao_marzola_vigolo_vattaro_property_styles.css  diaz8_trentino_property_styles.css  login_page_styles.css  macri_levico_terme_property_styles.css  property_page_styles.css  script.js
templates/: ai_broli_1_vigolo_vattaro_property.html  ai_broli_2_vigolo_vattaro_property.html  casa_al_lago_cigno_calceranica_al_lago_property.html  casa_mao_property.html  casa_mao_vezzena_vigolo_vattaro_property.html  casa_mao_vigolana_vigolo_vattaro_property.html  diaz8_trentino_property.html  highlands_levico_terme_property.html  highlands_property.html  login.html  macri_levico_terme_property.html
