[tool.poetry]
name = "repl-nix-guestbookguide"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_guestbookguide"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
jinja2 = "^3.1.3"
requests = "^2.31.0"
schedule = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
